# MPI-Any-Function-Rect-Rule

./: .gitignore  CMakeLists.txt  Grammar.md  README.md  utility.sh
src/: CMakeLists.txt  Main.cpp
src/Backend/: CMakeLists.txt  FuncEmitter.cpp
src/Frontend/: CMakeLists.txt  Lexer.cpp  Parser.cpp  Token.cpp
src/Include/Backend/: FuncEmitter.hpp
src/Include/Frontend/: Diagnostics.hpp  Lexer.hpp  Parser.hpp  Token.hpp
src/Include/Models/: FunctionParts.hpp  XFunction.hpp
src/Include/MpiWraps/: Wrappers.hpp
src/Include/Syntax/: AstNodes.hpp  IAstNode.hpp  IAstVisitor.hpp
src/Models/: CMakeLists.txt  XFunction.cpp
src/MpiWraps/: CMakeLists.txt  Wrappers.cpp
src/Syntax/: AstNodes.cpp  CMakeLists.txt
src/Tests/: CMakeLists.txt  TestEmitter.cpp  TestLexer.cpp  TestParser.cpp
